<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yelona.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/txterror"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center"
        android:textColor="@color/white"

        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtCientName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center|left"
                android:paddingLeft="8dp"
                android:text="Create new yelona Account"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"

                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtUsernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"




                    android:hint="@string/username_hint"
                    android:inputType="textCapWords"
                    android:textColorHint="#000000" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtEmailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#000000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtmobileWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Mobile"
                    android:inputType="numberSigned"
                    android:maxLength="10"
                    android:textColorHint="#000000" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtpasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="#000000" />
            </android.support.design.widget.TextInputLayout>


            <!-- <android.support.design.widget.TextInputLayout
                 android:id="@+id/repeatPasswordWrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <EditText
                     android:id="@+id/repeatPasswordSignUp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:hint="@string/password_hint"
                     android:inputType="textPassword"
                     android:textColorHint="#000000" />
             </android.support.design.widget.TextInputLayout>-->

            <RadioGroup
                android:id="@+id/rdGrpGender"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"


                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/rdMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"

                    android:text="Male" />


                <RadioButton
                    android:id="@+id/rdFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="Female" />

            </RadioGroup>

            <!--<Button-->
            <!--android:id="@+id/user_signup_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/primary_color"-->
            <!--android:textColor="@color/white"-->
            <!--android:text="@string/sign_up_button" />-->

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up_button"
                android:textColor="@color/white" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignin"
                android:layout_width="fill_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/sign_in_button"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/custom_signin_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:visibility="gone"
                android:gravity="center"
                android:onClick="CallLoginIntent"
                android:text="Already have account.? Login"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorSecondaryText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/or"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorSecondaryText" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signup_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="30dp"
                        android:visibility="gone" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/fb"
                        android:layout_alignParentLeft="true"

                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="20dp"
                        android:visibility="gone" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/login_fb_button"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"

                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="#3A589B"
                        android:drawableLeft="@drawable/icon_facebook"
                        android:paddingLeft="8dp"

                        android:text="Facebook"
                        android:textColor="#FFFFFF" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/login_google_button"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="10dp"

                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:background="#DB402C"
                        android:drawableLeft="@drawable/icon_gmail_plus"
                        android:paddingLeft="8dp"
                        android:text="Google"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
